--- a/BlazorSignalRBelgianCavesRegister/Client/wwwroot/index.html
+++ b/BlazorSignalRBelgianCavesRegister/Client/wwwroot/index.html
@@ -24,6 +24,8 @@
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
             <circle r="40%" cx="50%" cy="50%" />
+            <circle r="50%" cx="50%" cy="50%" />
+            <circle r="60%" cx="50%" cy="50%" />
         </svg>
         <div class="loading-progress-text"></div>
     </div>
